--- a/public/index.html
+++ b/public/index.html
@@ -1,112 +1,115 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Solara Chat</title>
 <script src="/socket.io/socket.io.js"></script>
 <style>
-body {
-  font-family: 'Poppins', sans-serif;
-  background: radial-gradient(circle, #1a001f, #000);
-  color: white;
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  margin: 0;
-  align-items: center;
-  justify-content: center;
-}
-#chat {
-  width: 90%;
-  max-width: 600px;
-  height: 70vh;
-  overflow-y: auto;
-  background: rgba(0,0,0,0.6);
-  border: 1px solid purple;
-  border-radius: 10px;
-  padding: 15px;
-  box-shadow: 0 0 20px purple;
-}
-.msg { margin: 8px 0; }
-.user { color: #b46aff; font-weight: bold; }
-#inputArea { margin-top: 10px; width: 90%; max-width: 600px; display: flex; gap: 10px; }
-input {
-  flex: 1;
-  padding: 10px;
-  border-radius: 10px;
-  border: none;
-  background: #222;
-  color: white;
-}
-button {
-  background: purple;
-  color: white;
-  border: none;
-  border-radius: 10px;
-  padding: 10px 15px;
-  cursor: pointer;
-}
-h1 {
-  color: #c77dff;
-  text-shadow: 0 0 10px purple;
-}
+  body{font-family:Inter,system-ui; background:#070607;color:#ddd;display:flex;flex-direction:column;align-items:center;gap:12px;padding:18px;}
+  #chat{width:100%;max-width:720px;height:68vh;overflow:auto;background:rgba(255,255,255,0.02);border-radius:8px;padding:12px;box-shadow:0 10px 30px rgba(0,0,0,0.6);}
+  .msg{margin:8px 0;padding:8px;border-radius:8px;}
+  .msg .who{font-weight:700;cursor:pointer;color:#c77dff}
+  .msg.system{background:linear-gradient(90deg, rgba(139,92,246,0.08), rgba(109,40,217,0.04));color:#fff}
+  .msg.normal{background:rgba(255,255,255,0.02)}
+  #inputArea{display:flex;gap:8px;width:100%;max-width:720px}
+  input,button{padding:10px;border-radius:8px;border:none}
+  input{flex:1;background:#111;color:#fff}
+  button{background:linear-gradient(90deg,#8b5cf6,#6d28d9);color:#fff}
+  /* popup */
+  #popup{position:fixed;left:50%;top:50%;transform:translate(-50%,-50%);background:#0b0b0b;padding:16px;border-radius:10px;border:1px solid #3f0fcf;display:none;z-index:40}
+  #popup small{color:#999}
 </style>
 </head>
 <body>
-<h1>💬 Solara Chat</h1>
-<div id="chat"></div>
+  <h2>💬 Solara Chat</h2>
+  <div id="chat" role="log" aria-live="polite"></div>
 
-<div id="inputArea">
-  <input type="text" id="message" placeholder="Type your message...">
-  <button id="send">Send</button>
-</div>
+  <div id="inputArea">
+    <input id="message" placeholder="Type a message..." />
+    <button id="send">Send</button>
+  </div>
+
+  <!-- small popup for userid -->
+  <div id="popup">
+    <div><strong id="popupName"></strong></div>
+    <div>UserID: <code id="popupId"></code></div>
+    <div style="margin-top:8px"><button id="copyBtn">Copy ID</button> <button id="closePopup">Close</button></div>
+    <small>Click a username in chat to view their ID.</small>
+  </div>
 
 <script>
-const socket = io();
-const chat = document.getElementById("chat");
-const sendBtn = document.getElementById("send");
-const messageInput = document.getElementById("message");
+  const socket = io();
+  const chat = document.getElementById('chat');
+  const send = document.getElementById('send');
+  const messageInput = document.getElementById('message');
 
-// Prompt username on first visit and save to localStorage
-let username = localStorage.getItem("solara_username");
-if (!username) {
-  username = prompt("Enter your username") || "Anonymous";
-  localStorage.setItem("solara_username", username);
-}
+  // persistent username prompt
+  let username = localStorage.getItem('solara_username');
+  if(!username) {
+    username = prompt('Enter your username') || 'Anonymous';
+    localStorage.setItem('solara_username', username);
+  }
 
-// Add a message to the chat box
-function addMessage(msg) {
-  const div = document.createElement("div");
-  div.className = "msg";
-  div.innerHTML = `<span class="user">${msg.user}</span>: ${msg.text} <small style="color:gray;">${msg.time}</small>`;
-  chat.appendChild(div);
-  chat.scrollTop = chat.scrollHeight;
-}
+  // add message (supports system messages and clickable usernames)
+  function addMessage(msg) {
+    const div = document.createElement('div');
+    div.className = 'msg ' + (msg.system ? 'system' : 'normal');
+    // username clickable
+    const who = document.createElement('span');
+    who.className = 'who';
+    who.textContent = msg.user;
+    // attach userid to the DOM element for popup
+    who.dataset.userid = msg.userid || '(unknown)';
+    who.addEventListener('click', () => showPopup(msg.user, who.dataset.userid));
+    const text = document.createElement('span');
+    text.style.marginLeft = '8px';
+    text.textContent = msg.text ? msg.text : '';
+    const time = document.createElement('div');
+    time.style.fontSize='12px'; time.style.color='#aaa'; time.style.marginTop='6px';
+    time.textContent = msg.time || '';
+    // build message element
+    div.appendChild(who);
+    div.appendChild(text);
+    div.appendChild(time);
+    chat.appendChild(div);
+    chat.scrollTop = chat.scrollHeight;
+  }
 
-// Load chat history
-socket.on("chatHistory", (history) => {
-  history.forEach(addMessage);
-});
+  // show popup with userid
+  const popup = document.getElementById('popup');
+  const popupName = document.getElementById('popupName');
+  const popupId = document.getElementById('popupId');
+  const copyBtn = document.getElementById('copyBtn');
+  const closePopup = document.getElementById('closePopup');
 
-// Receive new messages from server
-socket.on("chatMessage", (msg) => {
-  addMessage(msg);
-});
+  function showPopup(name, id) {
+    popupName.textContent = name;
+    popupId.textContent = id;
+    popup.style.display = 'block';
+  }
+  copyBtn.onclick = () => {
+    navigator.clipboard.writeText(popupId.textContent).then(()=> alert('Copied'));
+  };
+  closePopup.onclick = () => { popup.style.display = 'none'; };
 
-// Send a message
-function sendMessage() {
-  const text = messageInput.value.trim();
-  if (!text) return;
-  socket.emit("chatMessage", { user: username, text });
-  messageInput.value = "";
-}
+  // handle server events
+  socket.on('chatHistory', (history) => { history.forEach(addMessage); });
+  socket.on('chatMessage', (msg) => { addMessage(msg); });
+  socket.on('bannedNotice', (notice) => {
+    alert(notice.text || 'You are banned.');
+  });
 
-// Event bindings
-sendBtn.onclick = sendMessage;
-messageInput.addEventListener("keydown", (e) => {
-  if (e.key === "Enter") sendMessage();
-});
+  // send message
+  function sendMsg(){
+    const text = messageInput.value.trim();
+    if(!text) return;
+    socket.emit('chatMessage', { user: username, text });
+    messageInput.value = '';
+  }
+
+  send.addEventListener('click', sendMsg);
+  messageInput.addEventListener('keydown', (e)=> { if(e.key==='Enter') sendMsg(); });
 </script>
 </body>
 </html>
