--- a/public/index.html
+++ b/public/index.html
@@ -2,111 +2,93 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>TalkToMe Chat</title>
+  <title>Chat Room</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #0d0d0d;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
-    #messages {
-      width: 80%;
-      height: 70%;
-      overflow-y: auto;
-      background: #1a1a1a;
-      padding: 10px;
-      border-radius: 10px;
-    }
-    #input {
-      width: 80%;
-      display: flex;
-      margin-top: 10px;
-    }
-    #m {
-      flex: 1;
-      padding: 10px;
-      border: none;
-      border-radius: 5px;
-      outline: none;
-    }
-    button {
-      padding: 10px 15px;
-      border: none;
-      border-radius: 5px;
-      background: purple;
-      color: white;
-      margin-left: 5px;
-      cursor: pointer;
-    }
-    .system-message {
-      color: red;
-      font-weight: bold;
-      background: rgba(255, 0, 0, 0.1);
-      border-radius: 8px;
-      padding: 5px;
-      margin: 5px 0;
-      text-align: center;
-    }
-    .username {
-      color: #9b59b6;
-      cursor: pointer;
-    }
+    body { font-family: Arial; background: #0d0d0d; color: white; margin: 0; padding: 0; }
+    #chat { max-width: 800px; margin: 0 auto; padding: 20px; height: 80vh; overflow-y: scroll; border-bottom: 1px solid #555; }
+    #chat div { margin: 5px 0; }
+    #chat .system { color: red; font-weight: bold; }
+    #chat .username { font-weight: bold; cursor: pointer; color: purple; }
+    #messageForm { display: flex; max-width: 800px; margin: 0 auto; padding: 10px; }
+    #messageForm input { flex: 1; padding: 10px; border-radius: 5px; border: none; margin-right: 10px; }
+    #messageForm button { padding: 10px 20px; border: none; border-radius: 5px; background: purple; color: white; cursor: pointer; }
   </style>
 </head>
 <body>
-  <h1>💬 TalkToMe Chat</h1>
-  <div id="messages"></div>
-  <form id="input" action="">
-    <input id="m" autocomplete="off" placeholder="Type a message..." />
+  <div id="chat"></div>
+  <form id="messageForm">
+    <input id="messageInput" autocomplete="off" placeholder="Type a message..." />
     <button>Send</button>
   </form>
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
+
+    // Persistent username and cookie
     let username = localStorage.getItem("username");
-    let cookieId = localStorage.getItem("userid");
+    let userId = localStorage.getItem("userid");
 
     if (!username) {
       username = prompt("Enter your username:");
       localStorage.setItem("username", username);
     }
 
-    socket.emit("set username", { username, cookieId });
+    socket.emit("set username", { username, cookieId: userId });
 
     socket.on("setCookie", id => {
+      userId = id;
       localStorage.setItem("userid", id);
     });
 
-    document.querySelector("form").addEventListener("submit", e => {
+    const chat = document.getElementById("chat");
+    const form = document.getElementById("messageForm");
+    const input = document.getElementById("messageInput");
+
+    // Load chat history from server
+    async function loadHistory() {
+      const res = await fetch("/chat-history.json");
+      if (!res.ok) return;
+      const messages = await res.json();
+      messages.forEach(addMessage);
+      chat.scrollTop = chat.scrollHeight;
+    }
+
+    loadHistory();
+
+    // Add message to chat
+    function addMessage(msg) {
+      const div = document.createElement("div");
+      if (msg.system) {
+        div.classList.add("system");
+        div.textContent = msg.message;
+      } else {
+        const nameSpan = document.createElement("span");
+        nameSpan.textContent = msg.username;
+        nameSpan.classList.add("username");
+        nameSpan.onclick = () => alert(`User ID: ${msg.userId}`);
+        div.appendChild(nameSpan);
+
+        div.appendChild(document.createTextNode(`: ${msg.message}`));
+      }
+      chat.appendChild(div);
+      chat.scrollTop = chat.scrollHeight;
+    }
+
+    // Handle incoming messages
+    socket.on("chat message", addMessage);
+
+    // Handle banned notice
+    socket.on("bannedNotice", data => {
+      alert(data.text);
+    });
+
+    // Send message
+    form.addEventListener("submit", e => {
       e.preventDefault();
-      const input = document.getElementById("m");
-      if (input.value.trim() !== "") {
-        socket.emit("chat message", input.value.trim());
-        input.value = "";
-      }
-    });
-
-    socket.on("chat message", msg => {
-      const item = document.createElement("div");
-      item.className = msg.system ? "system-message" : "user-message";
-      item.innerHTML = msg.system
-        ? `<strong>${msg.username}:</strong> ${msg.message}`
-        : `<strong class="username" data-userid="${msg.userId}">${msg.username}</strong>: ${msg.message}`;
-      document.getElementById("messages").appendChild(item);
-      item.scrollIntoView({ behavior: "smooth" });
-    });
-
-    document.addEventListener("click", e => {
-      if (e.target.classList.contains("username")) {
-        const id = e.target.dataset.userid || "unknown";
-        alert(`User ID: ${id}`);
-      }
+      if (!input.value) return;
+      socket.emit("chat message", input.value);
+      input.value = "";
     });
   </script>
 </body>
